; ModuleID = '/home/carl/AnghaBench/linux/net/ceph/extr_ceph_common.c_ceph_wait_for_latest_osdmap.c'
source_filename = "/home/carl/AnghaBench/linux/net/ceph/extr_ceph_common.c_ceph_wait_for_latest_osdmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ceph_client = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }

@.str = private unnamed_addr constant [7 x i8] c"osdmap\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ceph_wait_for_latest_osdmap(%struct.ceph_client* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ceph_client*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.ceph_client* %0, %struct.ceph_client** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.ceph_client*, %struct.ceph_client** %4, align 8
  %9 = getelementptr inbounds %struct.ceph_client, %struct.ceph_client* %8, i32 0, i32 0
  %10 = call i32 @ceph_monc_get_version(i32* %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i64* %6)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %7, align 4
  store i32 %14, i32* %3, align 4
  br label %34

15:                                               ; preds = %2
  %16 = load %struct.ceph_client*, %struct.ceph_client** %4, align 8
  %17 = getelementptr inbounds %struct.ceph_client, %struct.ceph_client* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* %6, align 8
  %23 = icmp sge i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %34

25:                                               ; preds = %15
  %26 = load %struct.ceph_client*, %struct.ceph_client** %4, align 8
  %27 = getelementptr inbounds %struct.ceph_client, %struct.ceph_client* %26, i32 0, i32 1
  %28 = call i32 @ceph_osdc_maybe_request_map(%struct.TYPE_4__* %27)
  %29 = load %struct.ceph_client*, %struct.ceph_client** %4, align 8
  %30 = getelementptr inbounds %struct.ceph_client, %struct.ceph_client* %29, i32 0, i32 0
  %31 = load i64, i64* %6, align 8
  %32 = load i64, i64* %5, align 8
  %33 = call i32 @ceph_monc_wait_osdmap(i32* %30, i64 %31, i64 %32)
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %25, %24, %13
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @ceph_monc_get_version(i32*, i8*, i64*) #1

declare dso_local i32 @ceph_osdc_maybe_request_map(%struct.TYPE_4__*) #1

declare dso_local i32 @ceph_monc_wait_osdmap(i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
